--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
     <!-- the entire body must be written by student -->
-    <table style="width: 100%" id="table" border="1px solid black">
+    <table style="width: 100%" id="table" >
     <caption>
       Monthly savings
     </caption>
